# SMDPfier

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HANDOFF.md  HANDOFF_AGENT6.md  LICENSE  PRIMER.md  RATE_IMPLEMENTATION_SUMMARY.md  README.md  RELEASING.md  VERIFICATION_CHECKLIST.md  mkdocs.yml  pyproject.toml  verify_rate_default.py
.github/workflows/: ci.yml  publish.yml  release.yml
docs/: api.md  durations.md  errors.md  faq.md  index.md  masking_and_precheck.md  usage_index_vs_direct.md
examples/: cartpole_index_static.py  pendulum_direct_continuous.py  taxi_index_dynamic_mask.py
site/: 404.html  index.html  objects.inv  sitemap.xml
site/api/: index.html
site/durations/: index.html
site/errors/: index.html
site/faq/: index.html
site/masking_and_precheck/: index.html
site/search/: search_index.json
site/usage_index_vs_direct/: index.html
smdpfier/: __init__.py  errors.py  option.py  utils.py  wrapper.py
smdpfier.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
smdpfier/defaults/: __init__.py  durations.py  options.py  rewards.py
tests/: test_durations.py  test_errors.py  test_examples_run.py  test_masks_and_precheck.py  test_wrapper_core.py
